<resources>
    <string name="app_name">P20</string>
    <string name="quote1">1. Неграмотными людьми 21 века будут не те, кто не умеет читать и писать, a те, кто не умеет учиться и переучиваться. Алвин Тоффлер</string>
    <string name="quote2">2. Нельзя научиться у того, кто постоянно с тобой соглашается. Дадли Филд Малоун</string>
    <string name="quote3">3. Есть три метода обучения мудрости. Первый - через подражание, и он самый благородный. Второй - через повторение, и он самый простой. Третий - через опыт, и он самый горький. Конфуций</string>
    <string name="quote4">4. Настоящие знания мы получаем, когда ищем ответ на вопрос, а не когда узнаем сам ответ. Ллойд Александр</string>
    <string name="quote5">5. Я слышу - я забываю. Я вижу - я запоминаю. Я делаю - я понимаю. Конфуций</string>
    <string name="quote6">6. Живи так, как будто завтра умрёшь. Учись так, как будто собираешься жить вечно. Ганди</string>
    <string name="quote7">7. Никогда не останавливайте других. Скорость движения неважна, главное - само движение вперед. Платон</string>
    <string name="buttonKosmos">В космос!</string>
</resources>